// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkoutStatusBar > matches snapshot (full state) 1`] = `
<div
  class="WorkoutStatusBarRoot-sc-i2f6bh-0 fBzqaN"
>
  <span
    class="BadgeRoot-sc-1ky7gew-0 jPgDoj"
  >
    Модель: 
    ok
  </span>
  <span
    class="BadgeRoot-sc-1ky7gew-0 jPgDoj"
  >
    Camera: 
    ready
  </span>
  <span
    class="BadgeRoot-sc-1ky7gew-0 jPyCrP"
  >
    Voice
  </span>
  <span
    class="BadgeRoot-sc-1ky7gew-0 dcTerc"
  >
    Упражнение приостановлено
  </span>
  <span
    class="WorkoutStatusBarCameraError-sc-i2f6bh-1 fSMYZz"
  >
    Ошибка камеры: 
    boom
  </span>
</div>
`;

exports[`WorkoutStatusBar > matches snapshot (minimal) 1`] = `
<div
  class="WorkoutStatusBarRoot-sc-i2f6bh-0 fBzqaN"
>
  <span
    class="BadgeRoot-sc-1ky7gew-0 jPyCrP"
  >
    Модель: 
    wait
  </span>
  <span
    class="BadgeRoot-sc-1ky7gew-0 eWxdxU"
  >
    Camera: 
    off
  </span>
  <span
    class="BadgeRoot-sc-1ky7gew-0 eWxdxU"
  >
    V
  </span>
</div>
`;
